{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 44,
  "lineage": "6edfbc37-6c3f-577a-bbc0-6b08ccdd2cc9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Tool-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07355fe79b493752d",
            "arn": "arn:aws:ec2:eu-west-1:094132202025:instance/i-0e57c80f9db88e289",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e57c80f9db88e289",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Kitskat2023",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05b13bac22e7f01ba",
            "private_dns": "ip-10-0-0-84.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.84",
            "public_ip": "63.33.207.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07f1c8480c84cdf98",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04983ca8cb5c987a2",
            "tags": {
              "Environment": "wip",
              "Name": "Tool-Server"
            },
            "tags_all": {
              "Environment": "wip",
              "Name": "Tool-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ce3fab38308e182b"
            ]
          },
          "dependencies": [
            "aws_security_group.Tool-Server03",
            "aws_subnet.public_subnet_Tool-Server",
            "aws_vpc.ToolServer03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Project03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:094132202025:internet-gateway/igw-0d326322fb4e335d3",
            "id": "igw-0d326322fb4e335d3",
            "owner_id": "094132202025",
            "tags": {
              "Name": "wip"
            },
            "tags_all": {
              "Name": "wip"
            },
            "vpc_id": "vpc-02d458368d057fdcc"
          },
          "dependencies": [
            "aws_vpc.ToolServer03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:094132202025:route-table/rtb-0fa451b4a1d35e6d6",
            "id": "rtb-0fa451b4a1d35e6d6",
            "owner_id": "094132202025",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d326322fb4e335d3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Kay-Public"
            },
            "tags_all": {
              "Name": "Kay-Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d458368d057fdcc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Project03",
            "aws_vpc.ToolServer03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0daf7771313d4e492",
            "route_table_id": "rtb-0fa451b4a1d35e6d6",
            "subnet_id": "subnet-04983ca8cb5c987a2"
          },
          "dependencies": [
            "aws_internet_gateway.Project03",
            "aws_route_table.public",
            "aws_subnet.public_subnet_Tool-Server",
            "aws_vpc.ToolServer03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Tool-Server03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:094132202025:security-group/sg-0ce3fab38308e182b",
            "description": "Allow All inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce3fab38308e182b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPD from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPD from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPD from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RDS from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "project03",
            "name_prefix": "",
            "owner_id": "094132202025",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Tool-Server-Security-Group-Project03"
            },
            "tags_all": {
              "Name": "Tool-Server-Security-Group-Project03"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d458368d057fdcc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ToolServer03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_Tool-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:094132202025:subnet/subnet-04983ca8cb5c987a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04983ca8cb5c987a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "094132202025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tool-Server_Public_Subnet"
            },
            "tags_all": {
              "Name": "Tool-Server_Public_Subnet"
            },
            "vpc_id": "vpc-02d458368d057fdcc"
          },
          "dependencies": [
            "aws_vpc.ToolServer03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ToolServer03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:094132202025:vpc/vpc-02d458368d057fdcc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-021d02a6ef60ea2ed",
            "default_route_table_id": "rtb-04e1cbc468ac7b467",
            "default_security_group_id": "sg-0a77ad385d79510c2",
            "dhcp_options_id": "dopt-04841ed25b2ceeb74",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02d458368d057fdcc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04e1cbc468ac7b467",
            "owner_id": "094132202025",
            "tags": {
              "Name": "Project03"
            },
            "tags_all": {
              "Name": "Project03"
            }
          }
        }
      ]
    }
  ]
}